Fixes to unified intl NumberFormatterSkeleton implementation
Categories
(Core :: Internationalization, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | fixed |
| firefox90 | --- | fixed |
People
(Reporter: dminor, Assigned: dminor)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [i18n-unification])
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
With my WIP on Bug 1701695, I can run the SpiderMonkey ecma402 test suite against the unified intl::NumberFormat implementation.
I've found one bug so far: https://searchfox.org/mozilla-central/source/intl/components/src/NumberFormatterSkeleton.cpp#45 should be significantDigits, not fractionDigits.
And Greg noticed that the forward declaration here: https://searchfox.org/mozilla-central/source/intl/components/src/NumberFormatterSkeleton.h#13 is not valid because we use internal definitions of the structure. It should just be a #include "NumberFormat.h".
I still have a handful of test failures in SpiderMonkey, so there may be more problems :/. I'll put a patch up for review here once I work through the remaining failures.
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Set release status flags based on info from the regressing bug 1695937
| Assignee | ||
Comment 2•4 years ago
|
||
| Assignee | ||
Comment 3•4 years ago
|
||
These are fixes for issues noticed with NumberFormatterSkeleton while testing
this code in SpiderMonkey against the full set of intl tests there. I've added
minimal test cases for the issues encountered as part of this patch.
Comment 5•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•4 years ago
|
||
Comment on attachment 9216168 [details]
Bug 1705363 - Fixes to intl::NumberFormatterSkeleton; r=gregtatum!
Beta/Release Uplift Approval Request
- User impact if declined: Potentially incorrect results when rendering numbers through Fluent. As far as I know, there were no user bug reports for this, so it's possible that the affected code paths are not currently used in Fluent.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch is quite small and I checked it against the SpiderMonkey internationalization test suite while working on Bug 1701695 before splitting it out into a separate bug.
- String changes made/needed: None
Comment 7•4 years ago
|
||
Comment on attachment 9216168 [details]
Bug 1705363 - Fixes to intl::NumberFormatterSkeleton; r=gregtatum!
Low risk, has tests and we are still early in the beta cycle, approved for 89 Beta 3, thanks.
Comment 8•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Updated•4 years ago
|
Description
•