Bug 1705363 - Fixes to intl::NumberFormatterSkeleton; r=gregtatum a=pascalc

These are fixes for issues noticed with NumberFormatterSkeleton while testing
this code in SpiderMonkey against the full set of intl tests there. I've added
minimal test cases for the issues encountered as part of this patch.

Differential Revision: https://phabricator.services.mozilla.com/D112240